--- a/ViaPersonelHastalikTakip/packages.config
+++ b/ViaPersonelHastalikTakip/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="ClosedXML" version="0.94.0" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="ExcelDataReader" version="3.4.2" targetFramework="net461" />
+  <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net461" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
   <package id="FastMember" version="1.3.0" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net461" />
